1: Added Models and DbContexts in the reverse engineering process by initialising database and scaffolding it to generate models based on database tables of SqlServer

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "MoviesConnection": "Data Source=movies.db",
-    "UsersConnection" : "Data Source=users.db"
+    "DbConnection": "Server=VARUN-CHOWDARY-;Database=movieBookingDB;TrustServerCertificate=True;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
