--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "MoviesConnection": "Data Source=movies.db",
-    "UsersConnection": "Data Source=users.db"
+    "MoviesConnection": "Server=VARUN-CHOWDARY-;Database=movieApplicationDB;TrustServerCertificate=True;Trusted_Connection=True;",
+    "UsersConnection": "Server=VARUN-CHOWDARY-;Database=movieApplicationDB;TrustServerCertificate=True;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
